# niquests-mock

./: .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  justfile  pyproject.toml
.github/: release.yml
.github/workflows/: ci.yml  publish-testpypi.yml  publish.yml  pypi-smoke.yml  release-smoke.yml  release.yml
docs/: compatibility.md  release.md
examples/: decorator.py  fixture.py  matchers.py
src/niquests_mock/: __init__.py  api.py  diagnostics.py  exceptions.py  matchers.py  models.py  plugin.py  responses.py  router.py  types.py
tests/: test_api.py
